--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -48,7 +48,7 @@ body {
 <body>
     <div class="middle">
     <div>
-        <p id="timer" class="timer">00:00:00</p>
+        <p id="timer" class="timer"></p>
     </div>
     <div id="timer_options">
         <p>
