add restart, pause and reset functionality to timer

--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -52,9 +52,9 @@ body {
     </div>
     <div id="timer_options">
         <p>
-            <button class="button" style="background-color:#5da423;">START</button>
-            <button class="button" style="background-color:grey;">PAUSE</button>
-            <button class="button" style="background-color:#c60f13;">RESET</button>
+            <button id="start" class="button" style="background-color:#5da423;">START</button>
+            <button id="pause" class="button" style="background-color:grey;">PAUSE</button>
+            <button id="reset" class="button" style="background-color:#c60f13;">RESET</button>
         </p>
     </div>
     </div>
