add todo list feature

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -17,6 +17,10 @@ nav button{
     font-style: normal;
     padding: 10px;
     background: none;
+    cursor: pointer;
+}
+nav button:hover{
+    background: #52504f;
 }
 body {
     display: flex;
@@ -33,8 +37,8 @@ body {
 <body>
     <nav>
         <button id="logo">Yet to decide!</button>
-        <button>Timer</button>
-        <button>To-do</button>
+        <button id="timer">Timer</button>
+        <button id="todo">To-do</button>
         <button>Save for later</button>
         <button>Archive</button>
     </nav>
