--- a/extension/popup/timer.html
+++ b/extension/popup/timer.html
@@ -5,7 +5,7 @@
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.dom.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="timer_sketch.js"></script>
 </head>
 <style>
 .middle {
