setup persistent storage for todo-list

--- a/extension/popup/todo.html
+++ b/extension/popup/todo.html
@@ -4,9 +4,19 @@
     <title>Todo-list</title>
 </head>
 <style>
+@font-face {
+  font-family: 'Product Sans';
+  font-style: normal;
+  font-weight: bold;
+  src: url('../assets/ProductSans/Regular.ttf'); 
+}
 body {
     width: 700px;
     height: 525px;
+}
+.task{
+    font-size: 20px;
+    font-family: 'Product Sans';
 }
 .input{
   width: 75%;
@@ -28,6 +38,10 @@ body {
   font-size: 16px;
   margin: 2px 1px;
   cursor: pointer;
+  border-radius: 2px;
+  font-family: "Helvetica", Helvetica;
+  font-style: normal;
+  font-weight: 500;
 }
 </style>
 
