add check box feature for completed tasks

--- a/extension/popup/todo.html
+++ b/extension/popup/todo.html
@@ -12,8 +12,12 @@
     <hr>
     <main>
         <section class="tasks-section">
-            <header><h1 class="task-heading" id="NewTasksHeading">New Tasks</h1></header>
+            <fieldset>
+                <legend>
+                    <h1 class="task-heading" id="NewTasksHeading">New Tasks</h1>
+                </legend>
             <div id="NewTasks"></div>
+            </fieldset>
         </section>
     </main>
 <script src="todo.js"></script>
