add 'save for later' feature

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -39,7 +39,7 @@ body {
         <button id="logo">Yet to decide!</button>
         <button id="timer">Timer</button>
         <button id="todo">To-do</button>
-        <button>Save for later</button>
+        <button id="sfl">Save for later</button>
         <button>Archive</button>
     </nav>
     <div id="content">
