--- a/extension/popup/timer/timer.html
+++ b/extension/popup/timer/timer.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Pomodoro Timer</title>
-    <script src="../libraries/p5.min.js"></script>
-    <script src="../libraries/p5.dom.min.js"></script>
-    <script src="../libraries/p5.sound.min.js"></script>
+    <script src="../../libraries/p5.min.js"></script>
+    <script src="../../libraries/p5.dom.min.js"></script>
+    <script src="../../libraries/p5.sound.min.js"></script>
     <script src="timer_sketch.js"></script>
 </head>
 <style>
