override new tab to display time & random wallpapers from unsplash

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -32,8 +32,9 @@ body {
     flex: auto;
 }
 .name {
-    font-size: 25px;
+    font-size: 24px;
     padding: 5px;
+    cursor: default;
 }
 .name:hover{
     background: none;
