refactor save-for-later, add title and domain to site item

--- a/extension/popup/save-for-later/sfl.html
+++ b/extension/popup/save-for-later/sfl.html
@@ -7,12 +7,14 @@
 <body>
     <div>
         <div id="add_website_section"></div>
-        <button class="add-website-button" id="addWebsiteBtn" state="Normal">Add Website</button>
+        <button class="add-website-button" id="addWebsiteBtn" state="NormalMode">Add Website</button>
     </div>
     <hr>
     <main>
         <section class="websites-section">
-            <div id="websites"></div>
+            <div id="websites">
+                <ul id="queue"></ul>
+            </div>
         </section>
     </main>
 <script src="sfl.js"></script>
